--- a/albums/ashes-and-echoes/tracks/we-did-start-the-fire.html
+++ b/albums/ashes-and-echoes/tracks/we-did-start-the-fire.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>We Did Start the Fire (Burning Man History Jam) | Ashes and Echoes | Mycal</title>
-  <meta name="description" content="We Did Start the Fire is a playful history jam tracing Burning Man lore in fast lines and handclaps.">
+  <meta name="description" content="A rhythmic ritual timeline-in-flames tracing Burning Man's evolution from Baker Beach to the open Playa.">
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <link rel="shortcut icon" href="/favicon.ico">
@@ -29,9 +29,9 @@
     <section class="hero">
       <img src="/assets/img/tracks/we-did-start-the-fire.jpg" alt="Cover art for We Did Start the Fire (Burning Man History Jam)">
       <div class="hero-content">
-        <p class="meta">Ashes and Echoes — Track 1</p>
+        <p class="meta">Ashes and Echoes — Track 1 · 6:29</p>
         <h1>We Did Start the Fire (Burning Man History Jam)</h1>
-        <p>A rapid-fire chant of BRC lore, from Baker Beach to the Man burn, with call-and-response shouts.</p>
+        <p>“We Did Start the Fire (Burning Man History Jam)” is a rhythmic ritual, a timeline-in-flames, and a campfire chant for the dust-born. Tracing Burning Man’s evolution from a rope on Baker Beach to towering temples and art cars in the void, the song weaves names, myths, and moments into a lyrical memory loop — part oral history, part glitch-folk gospel, and a wink to the firestarter in all of us.</p>
         <div class="button-row">
           <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
           <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
@@ -39,10 +39,123 @@
       </div>
     </section>
 
+    <section class="section" aria-labelledby="about-heading">
+      <h2 id="about-heading">About this track</h2>
+      <p>
+        “We Did Start the Fire (Burning Man History Jam)” is a rhythmic ritual, a timeline-in-flames,
+        and a campfire chant for the dust-born. Tracing Burning Man’s evolution from a rope on Baker
+        Beach to towering temples and art cars in the void, the song weaves names, myths, and moments
+        into a lyrical memory loop. It’s not just history — it’s oral tradition, glitch-folk gospel,
+        and a wink to the firestarter in all of us.
+      </p>
+    </section>
+
     <section class="section" aria-labelledby="lyrics-heading">
       <h2 id="lyrics-heading">Lyrics</h2>
       <pre class="lyrics-block">
-Lyrics coming soon.
+"Before the apps… before the wristbands…
+before the permits and the sparkle Ponies…
+there was Baker Beach… a bonfire… a rope…
+and an idea passed between friends.”
+(beat)
+“That idea found dust… and space…
+and the Playa gave it room to grow.”
+
+Baker Beach, Zone Trip Four Cacophony kicks the door,
+Harvey, James and TAZ, black suits, jazz and desert daze.
+Danger Ranger, Peter Pan, code 007 man,
+Marian's Seventy-Eight Olds, Larry’s dream, the story unfolds. , (humming “mmm-hmm”)
+Christmas Camp, Turbo Ted, Stagger Sisters, raver heads,
+Goa Gil, John Law’s Doghead show,
+3-Day Stubble, let it go!
+Pull the rope, raise the Man,
+Nothing was yet pre-planned,
+Trash fence, lamps lit, Center Camp misfits
+
+We did start the fire!
+Lit it on the Playa, and it’s getting higher!
+We did start the fire!
+Rangers on patrol now, never gonna tire.
+
+Papa Satan, Hellco crew, Techno Ghetto breaks right through,
+Regulations rolling in, John Law’s departure begins.
+Hualapai and Fly Ranch, LNT in every branch,
+Rod Garrett draws the plan, theme camps sprawl across the land.
+Pier to Pier, Temple Flux, Mantfarm, mutant art trucks,
+Bliss Dance, Rites of Passage, Trojan Horse, DPW’s wreckage.
+TV Free and Big Rig’s roar,
+Jiffy Lube and camel corps,
+Space Whale, Light House, drones, drones, drones!
+Aaron’s hat and shattered bones.
+(Woooohhh)
+
+We did start the fire!
+On the open Playa, glowing in the wire.
+We did start the fire!
+Even when it's gone, the myth keeps burning higher.
+
+Rangers in the dust at dawn,
+Code Double Oh then he’s gone.
+Exploding Man in ‘98,
+Eviction seals a dusty fate.
+Mowers parked out in the void,
+Absurdity we all enjoyed.
+Sergey camps, BLM heat, DPW won’t face defeat,
+Art cars, stilt stars, Aaron’s clock and hexed guitars.
+White Ocean, Catacombs,
+Bank of Un-America loans,
+Church Trap's got no grace,
+Temple’s fire lights your face.
+Robots walk, Nixon’s law,
+Hexatron draws the awe.
+Tenner bikes, burner rites,
+Welcome home on desert nights.
+No minivan, no glam parade,
+Just boot prints where the dream was made. (aaaaya)
+We did start the fire!
+Burned it all to ashes, made a spire higher.
+We did start the fire!
+Now we’re dust and legends, riding out the wire.
+“They say we leave no trace.
+But look closer…
+There’s footprints under the dust.
+Signals in the static.
+And echoes from a campfire…
+that burned before the map had names
+“Mycal, You just had to be there.”
+
+We did start the fire!
+On the open Playa, glowing in the wire.
+We did start the fire!
+Even when it's gone, the myth keeps burning higher.
+
+Rangers in the dust at dawn,
+Code 007 — then he’s gone.
+Exploding Man in ‘98,
+Eviction seals a dusty fate.
+Mowers parked out in the void,
+Absurdity we all enjoyed.
+Sergey camps, BLM heat, DPW won’t face defeat,
+Art cars, stilt stars, Aaron’s clock and hexed guitars.
+White Ocean, Catacombs,
+Bank of Un-America loans,
+Church Trap's got no grace,
+Temple’s fire lights your face.
+Robots walk, Nixon’s law,
+Hexatron draws the awe.
+Tenner bikes, burner rites,
+Welcome home on desert nights.
+No minivan, no glam parade,
+Just boot prints where the dream was made. We did start the fire!
+Burned it all to ashes, made a spire higher.
+We did start the fire!
+Now we’re dust and legends, riding out the wire.
+“They say we leave no trace.
+But look closer…
+There’s footprints under the dust.
+Signals in the static.
+And echoes from a campfire…
+that burned before the map had names
       </pre>
     </section>
   </main>
@@ -71,18 +184,21 @@ Lyrics coming soon.
     },
     "inAlbum": {
       "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+      "name": "Ashes and Echoes — Songs from the Playa"
     },
-    "genre": ["Electronic", "Burning Man"],
+    "genre": ["Folk", "Electronic", "Burning Man", "History Jam"],
+    "position": 1,
     "datePublished": "2025-08-15",
     "image": "https://music.mycal.net/assets/img/tracks/we-did-start-the-fire.jpg",
     "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/we-did-start-the-fire",
+    "description": "“We Did Start the Fire (Burning Man History Jam)” is a rhythmic ritual, a timeline-in-flames, and a campfire chant for the dust-born. Tracing Burning Man’s evolution from a rope on Baker Beach to towering temples and art cars in the void, the song weaves names, myths, and moments into a lyrical memory loop — part oral history, part glitch-folk gospel, and a wink to the firestarter in all of us.",
     "sameAs": [
       "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
     ],
     "lyrics": {
       "@type": "CreativeWork",
-      "text": "Lyrics coming soon."
+      "text": "Full lyrics available on this page at https://music.mycal.net/albums/ashes-and-echoes/tracks/we-did-start-the-fire"
     }
   }
   </script>
