--- a/albums/ashes-and-echoes/tracks/burner-girl.html
+++ b/albums/ashes-and-echoes/tracks/burner-girl.html
@@ -1,90 +1,154 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Burner Girl | Ashes and Echoes | Mycal</title>
-  <meta name="description" content="Burner Girl is a neon pop track about bike rides, glow sticks, and campfire confessions.">
-  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <meta charset="utf-8">
+  <title>Burner Girl – Mycal</title>
   <link rel="stylesheet" href="/assets/css/style.css">
-</head>
-<body>
-  <header>
-    <nav class="navbar" aria-label="Primary">
-      <a class="logo" href="/">
-        <span>music.mycal.net</span>
-      </a>
-      <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
-        <a href="/albums/ashes-and-echoes/#tracklist">Tracklist</a>
-      </div>
-    </nav>
-  </header>
 
-  <main>
-    <section class="hero">
-      <img src="/assets/img/tracks/burner-girl.jpg" alt="Cover art for Burner Girl">
-      <div class="hero-content">
-        <p class="meta">Ashes and Echoes — Track 3</p>
-        <h1>Burner Girl</h1>
-        <p>Sugary synths and four-on-the-floor drums celebrating the fearless friend who keeps the lights on after midnight.</p>
-        <div class="button-row">
-          <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
-          <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="section" aria-labelledby="lyrics-heading">
-      <h2 id="lyrics-heading">Lyrics</h2>
-      <pre class="lyrics-block">
-Lyrics coming soon.
-      </pre>
-    </section>
-  </main>
-
-  <footer>
-    <div class="footer-inner">
-      <div>© 2025 Mycal Music</div>
-      <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
-        <a href="/">Home</a>
-      </div>
-    </div>
-  </footer>
-
+  <!-- JSON-LD for this track -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "MusicRecording",
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/burner-girl",
     "name": "Burner Girl",
-    "duration": "PT4M",
-    "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
     },
     "inAlbum": {
       "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+      "name": "Ashes and Echoes — Songs from the Playa"
     },
-    "genre": ["Pop", "Burning Man"],
+    "duration": "PT4M",
+    "position": 3,
+    "genre": ["Folk", "Electronic", "Burning Man", "Love Song"],
     "datePublished": "2025-08-15",
     "image": "https://music.mycal.net/assets/img/tracks/burner-girl.jpg",
     "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/burner-girl",
-    "sameAs": [
-      "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
-    ],
+    "description": "\"Burner Girl\" is a desert crush anthem — a neon-lit love song about finding your orbit around a wild, glowing soul on the Playa. It rides the line between EDM camp banger and starry-eyed romance, all dust, lasers, basslines and heartbeats in sync.",
     "lyrics": {
       "@type": "CreativeWork",
-      "text": "Lyrics coming soon."
+      "text": "Full lyrics available on this page at https://music.mycal.net/albums/ashes-and-echoes/tracks/burner-girl"
     }
   }
   </script>
+</head>
+<body>
+  <main class="track-page">
+    <header class="track-header">
+      <a href="/albums/ashes-and-echoes/" class="back-link">← Back to Ashes and Echoes</a>
+      <h1>Burner Girl</h1>
+      <p>Track 3 · 4:00 · Ashes and Echoes — Songs from the Playa</p>
+    </header>
+
+    <section class="track-media">
+      <img src="/assets/img/tracks/burner-girl.jpg"
+           alt="Cover art for Burner Girl"
+           class="track-image">
+
+      <div class="track-links">
+        <!-- Replace these href values with real links -->
+        <a href="#" class="btn">Listen on Spotify</a>
+        <a href="#" class="btn">Bandcamp</a>
+        <a href="#" class="btn">YouTube Music</a>
+      </div>
+    </section>
+
+    <section class="track-description">
+      <h2>About this track</h2>
+      <p>
+        “Burner Girl” is a desert crush anthem — a neon-lit love song about finding your orbit around
+        a wild, glowing soul on the Playa. It lives where lasers, basslines, and dust storms collide:
+        art cars rolling by, heartbeat to heartbeat, two burners spinning through the night like they
+        were meant to meet there all along.
+      </p>
+    </section>
+
+    <section class="lyrics">
+      <h2>Lyrics</h2>
+      <pre>
+rolling through the gate after 12 hours of traffic
+finally setup camp, grab my trusty steed and head out
+to deep Playa, as the day empties out I see...
+
+BURNER GIRL!
+
+(Ayy! Whoa-oh! Whoa-oh!)
+
+Out in the desert, the sun’s dipping low,
+Dust swirls around, but she steals the glow.
+Draped in the wild, she’s untamed and free,
+A spark in the haze, she’s beckoning me.
+Pulses ignite with the night’s desert call,
+Lost on the Playa, I’m drawn where she’s from.
+She dances in shadows, a neon-lit gleam,
+A soul of the burn, my radical dream.
+
+The baseline drops, and the night ignites,
+She’s glowing wild under laser lights.
+I’m caught in her orbit, can’t break away,
+Burner Girl’s got me, I’m here to stay.
+
+Burner Girl, light me up, set me free,
+Dancing through the dust, you’re my revelry.
+Burner Girl, take my hand, lead the way,
+In this desert dream, forever we’ll play.
+(Ooh-oh-oh) Burner Girl, you’re the flame,
+(Ooh-oh-oh) Burning bright, no shame,
+(Ooh-oh-oh) Spin me round, yell my name,
+Burner Girl, Burner Girl, ignite the FLAME!
+
+She’s got a smile like the sunrise glow,
+A rebel with wings where the wild winds blow.
+Art cars are rolling, the beat’s in my chest,
+She pulls me closer, I’m lost in her quest.
+Tents in the madness, stars burn above,
+Her voice in the chaos, it’s all she said:
+“Live for the moment, let’s ride the flame,”
+Burner Girl’s spark won’t be Contained.
+
+The baseline drops, and the night ignites,
+She’s glowing wild under laser lights.
+I’m caught in her orbit, can’t break away,
+Burner Girl’s got me, I’m here to stay.
+
+Burner Girl, spark the night, set me free,
+Dust and fire, you’re my fantasy
+Burner Girl, take my hand, lead me there,
+In this desert dream, we’re lost in the air.
+(Ooh-oh-oh) Burner Girl, you ignite,
+(Ooh-oh-oh) Burning bright, no shame,
+(Ooh-oh-oh) Spin me round, yell my name,
+Burner Girl, Burner Girl, light the FLAME!
+
+The fire’s alive, the crowd’s in a trance,
+She pulls me in with a single glance.
+Heartbeat to heartbeat, we’re synced to the sound,
+In this dusty wonderland, love’s what we found.
+Oh, the night’s eternal, the stars never fade,
+Burner Girl, with you, I’m never afraid!
+(Ayy! Whoa-oh!)
+
+Out in the desert, where the wild hearts run,
+Burner Girl, you’re my rising sun.
+Heartbeat to heartbeat, we’re synced to the sound,
+In this dusty wonderland, love’s what we found.
+(ayoow!)
+
+BURNER GIRL, take my hand (Ayy!)
+
+BURNER GIRL, lead the way (Whoa-oh!)
+
+BURNER GIRL, set me free, (Ayy! )
+
+マイカル.... Call me home
+
+(Whoa)
+マイカル.... Call me home
+      </pre>
+    </section>
+  </main>
 </body>
 </html>
