--- a/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html
+++ b/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html
@@ -1,90 +1,130 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ten Principles, One Heart | Ashes and Echoes | Mycal</title>
-  <meta name="description" content="Ten Principles, One Heart is a campfire chorus honoring radical inclusion, gifting, and communal effort.">
-  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <meta charset="utf-8">
+  <title>Ten Principles, One Heart – Mycal</title>
   <link rel="stylesheet" href="/assets/css/style.css">
-</head>
-<body>
-  <header>
-    <nav class="navbar" aria-label="Primary">
-      <a class="logo" href="/">
-        <span>music.mycal.net</span>
-      </a>
-      <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
-        <a href="/albums/ashes-and-echoes/#tracklist">Tracklist</a>
-      </div>
-    </nav>
-  </header>
 
-  <main>
-    <section class="hero">
-      <img src="/assets/img/tracks/ten-principles-one-heart.jpg" alt="Cover art for Ten Principles, One Heart">
-      <div class="hero-content">
-        <p class="meta">Ashes and Echoes — Track 4</p>
-        <h1>Ten Principles, One Heart</h1>
-        <p>Acoustic strums and hand percussion celebrating the values that hold the city together.</p>
-        <div class="button-row">
-          <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
-          <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="section" aria-labelledby="lyrics-heading">
-      <h2 id="lyrics-heading">Lyrics</h2>
-      <pre class="lyrics-block">
-Lyrics coming soon.
-      </pre>
-    </section>
-  </main>
-
-  <footer>
-    <div class="footer-inner">
-      <div>© 2025 Mycal Music</div>
-      <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
-        <a href="/">Home</a>
-      </div>
-    </div>
-  </footer>
-
+  <!-- JSON-LD for this track -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "MusicRecording",
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart",
     "name": "Ten Principles, One Heart",
-    "duration": "PT2M59S",
-    "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
     },
     "inAlbum": {
       "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+      "name": "Ashes and Echoes — Songs from the Playa"
     },
-    "genre": ["Folk", "Burning Man"],
+    "duration": "PT2M59S",
+    "position": 4,
+    "genre": ["Folk", "Electronic", "Burning Man", "Anthem"],
     "datePublished": "2025-08-15",
     "image": "https://music.mycal.net/assets/img/tracks/ten-principles-one-heart.jpg",
     "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart",
-    "sameAs": [
-      "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
-    ],
+    "description": "\"Ten Principles, One Heart\" is the Playa pledge in song form — a sing-along camp anthem that runs the Burning Man principles through dust, bass, and radical love. It’s part reminder, part rallying cry: from radical inclusion to leaving no trace, many burners, one heart.",
     "lyrics": {
       "@type": "CreativeWork",
-      "text": "Lyrics coming soon."
+      "text": "Full lyrics available on this page at https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart"
     }
   }
   </script>
+</head>
+<body>
+  <main class="track-page">
+    <header class="track-header">
+      <a href="/albums/ashes-and-echoes/" class="back-link">← Back to Ashes and Echoes</a>
+      <h1>Ten Principles, One Heart</h1>
+      <p>Track 4 · 2:59 · Ashes and Echoes — Songs from the Playa</p>
+    </header>
+
+    <section class="track-media">
+      <img src="/assets/img/tracks/ten-principles-one-heart.jpg"
+           alt="Cover art for Ten Principles, One Heart"
+           class="track-image">
+
+      <div class="track-links">
+        <!-- Replace these href values with real links -->
+        <a href="#" class="btn">Listen on Spotify</a>
+        <a href="#" class="btn">Bandcamp</a>
+        <a href="#" class="btn">YouTube Music</a>
+      </div>
+    </section>
+
+    <section class="track-description">
+      <h2>About this track</h2>
+      <p>
+        “Ten Principles, One Heart” is the Playa pledge turned into a chorus. It walks through the dust
+        with a backpack of dreams and turns the principles into something you can shout with your camp:
+        radical inclusion, gifting, immediacy, communal effort, and a reminder that when the burn is
+        over, the real temple is the way we carry each other home.
+      </p>
+    </section>
+
+    <section class="lyrics">
+      <h2>Lyrics</h2>
+      <pre>
+Rollin’ through dust with a backpack of dreams
+Playa wind howlin’ through busted-up seams
+Met a stranger who gave me cold tea and a smile
+Said “Welcome home, stay weird for a while”
+LED bikes like a galaxy spun
+The party don’t end with the rising sun
+Every step in the sand leaves a spark in your soul
+Every camp’s burning a piece of the whole
+
+Ten principles, one heart 
+We glow like sparks in the dark 
+We gift, we build, we play our part 
+Radical love, that's our art 
+From dust to flame, we rise and start 
+Ten principles, one heart 
+(yaaaah!)
+
+Radical welcome wherever you land 
+Self-expression kicks up the sand
+ 
+No brands, no deals — just soul and skin 
+A gift in your hand, no price, just grin
+Dust in your hair, a beat in your soul 
+Every sunrise makes you feel whole 
+Art takes flight in a desert dream 
+Living the moment, a vibrant stream
+No trace left but the stories we tell
+Immediacy's real, a truth you can tell
+Communal effort, leave ego behind
+Consent and respect — we stay radically kind
+
+Leave your titles, your status, your plan 
+Become the dust, the art, the clan 
+On the edge of the void, we dance and ignite 
+Burn the fears, let your joy take flight
+Strip off the masks, let the real you shine 
+In the dust we’re all one — no yours, no mine 
+(yeahhh!) 
+Sing it now—
+
+Ten principles, one heart (say it loud!) 
+Glowin’ wild in the dark (shout it proud!) 
+We build, we dance, we share our spark 
+Radical dreams leave a mark 
+From dust to light, we play our part 
+Ten principles, one heart 
+(whoooa!) 
+Ten principles, one heart 
+(ohhh yeah!) 
+Ten principles, one heart
+Ten principles! (One heart!)
+
+Back to the dust, where the heart stays free 
+Ten principles live in you and me.
+      </pre>
+    </section>
+  </main>
 </body>
 </html>
