--- a/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html
+++ b/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html
@@ -1,63 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Ten Principles, One Heart – Mycal</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ten Principles, One Heart | Ashes and Echoes | Mycal</title>
+  <meta name="description" content="A dust-and-bass anthem that runs the Burning Man principles through radical love and communal energy.">
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="/assets/css/style.css">
-
-  <!-- JSON-LD for this track -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "MusicRecording",
-    "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart",
-    "name": "Ten Principles, One Heart",
-    "byArtist": {
-      "@type": "MusicGroup",
-      "name": "Mycal"
-    },
-    "inAlbum": {
-      "@type": "MusicAlbum",
-      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
-      "name": "Ashes and Echoes — Songs from the Playa"
-    },
-    "duration": "PT2M59S",
-    "position": 4,
-    "genre": ["Folk", "Electronic", "Burning Man", "Anthem"],
-    "datePublished": "2025-08-15",
-    "image": "https://music.mycal.net/assets/img/tracks/ten-principles-one-heart.jpg",
-    "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart",
-    "description": "\"Ten Principles, One Heart\" is the Playa pledge in song form — a sing-along camp anthem that runs the Burning Man principles through dust, bass, and radical love. It’s part reminder, part rallying cry: from radical inclusion to leaving no trace, many burners, one heart.",
-    "lyrics": {
-      "@type": "CreativeWork",
-      "text": "Full lyrics available on this page at https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart"
-    }
-  }
-  </script>
 </head>
 <body>
-  <main class="track-page">
-    <header class="track-header">
-      <a href="/albums/ashes-and-echoes/" class="back-link">← Back to Ashes and Echoes</a>
-      <h1>Ten Principles, One Heart</h1>
-      <p>Track 4 · 2:59 · Ashes and Echoes — Songs from the Playa</p>
-    </header>
+  <header>
+    <nav class="navbar" aria-label="Primary">
+      <a class="logo" href="/">
+        <span>music.mycal.net</span>
+      </a>
+      <div class="nav-links">
+        <a href="/albums/ashes-and-echoes/">Album</a>
+        <a href="/albums/ashes-and-echoes/#tracklist">Tracklist</a>
+      </div>
+    </nav>
+  </header>
 
-    <section class="track-media">
-      <img src="/assets/img/tracks/ten-principles-one-heart.jpg"
-           alt="Cover art for Ten Principles, One Heart"
-           class="track-image">
-
-      <div class="track-links">
-        <!-- Replace these href values with real links -->
-        <a href="#" class="btn">Listen on Spotify</a>
-        <a href="#" class="btn">Bandcamp</a>
-        <a href="#" class="btn">YouTube Music</a>
+  <main>
+    <section class="hero">
+      <img src="/assets/img/tracks/ten-principles-one-heart.jpg" alt="Cover art for Ten Principles, One Heart">
+      <div class="hero-content">
+        <p class="meta">Ashes and Echoes — Track 4 · 2:59</p>
+        <h1>Ten Principles, One Heart</h1>
+        <p>“Ten Principles, One Heart” is the Playa pledge turned into a chorus — a sing-along anthem that carries radical inclusion, gifting, immediacy, and communal effort straight into the dust.</p>
+        <div class="button-row">
+          <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
+          <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
+        </div>
       </div>
     </section>
 
-    <section class="track-description">
-      <h2>About this track</h2>
+    <section class="section" aria-labelledby="about-heading">
+      <h2 id="about-heading">About this track</h2>
       <p>
         “Ten Principles, One Heart” is the Playa pledge turned into a chorus. It walks through the dust
         with a backpack of dreams and turns the principles into something you can shout with your camp:
@@ -66,9 +49,9 @@
       </p>
     </section>
 
-    <section class="lyrics">
-      <h2>Lyrics</h2>
-      <pre>
+    <section class="section" aria-labelledby="lyrics-heading">
+      <h2 id="lyrics-heading">Lyrics</h2>
+      <pre class="lyrics-block">
 Rollin’ through dust with a backpack of dreams
 Playa wind howlin’ through busted-up seams
 Met a stranger who gave me cold tea and a smile
@@ -126,5 +109,48 @@ Ten principles live in you and me.
       </pre>
     </section>
   </main>
+
+  <footer>
+    <div class="footer-inner">
+      <div>© 2025 Mycal Music</div>
+      <div class="nav-links">
+        <a href="/albums/ashes-and-echoes/">Album</a>
+        <a href="/">Home</a>
+      </div>
+    </div>
+  </footer>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MusicRecording",
+    "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart",
+    "name": "Ten Principles, One Heart",
+    "duration": "PT2M59S",
+    "inLanguage": "en",
+    "byArtist": {
+      "@type": "MusicGroup",
+      "name": "Mycal"
+    },
+    "inAlbum": {
+      "@type": "MusicAlbum",
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+      "name": "Ashes and Echoes — Songs from the Playa"
+    },
+    "position": 4,
+    "genre": ["Folk", "Electronic", "Burning Man", "Anthem"],
+    "datePublished": "2025-08-15",
+    "image": "https://music.mycal.net/assets/img/tracks/ten-principles-one-heart.jpg",
+    "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart",
+    "sameAs": [
+      "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
+    ],
+    "description": "\"Ten Principles, One Heart\" is the Playa pledge in song form — a sing-along camp anthem that runs the Burning Man principles through dust, bass, and radical love. It’s part reminder, part rallying cry: from radical inclusion to leaving no trace, many burners, one heart.",
+    "lyrics": {
+      "@type": "CreativeWork",
+      "text": "Rollin’ through dust with a backpack of dreams\\nPlaya wind howlin’ through busted-up seams\\nMet a stranger who gave me cold tea and a smile\\nSaid “Welcome home, stay weird for a while”\\nLED bikes like a galaxy spun\\nThe party don’t end with the rising sun\\nEvery step in the sand leaves a spark in your soul\\nEvery camp’s burning a piece of the whole\\n\\nTen principles, one heart \\\nWe glow like sparks in the dark \\\nWe gift, we build, we play our part \\\nRadical love, that's our art \\\nFrom dust to flame, we rise and start \\\nTen principles, one heart \\\n(yaaaah!)\\n\\nRadical welcome wherever you land \\\nSelf-expression kicks up the sand\\n \\\nNo brands, no deals — just soul and skin \\\nA gift in your hand, no price, just grin\\nDust in your hair, a beat in your soul \\\nEvery sunrise makes you feel whole \\\nArt takes flight in a desert dream \\\nLiving the moment, a vibrant stream\\nNo trace left but the stories we tell\\nImmediacy's real, a truth you can tell\\nCommunal effort, leave ego behind\\nConsent and respect — we stay radically kind\\n\\nLeave your titles, your status, your plan \\\nBecome the dust, the art, the clan \\\nOn the edge of the void, we dance and ignite \\\nBurn the fears, let your joy take flight\\nStrip off the masks, let the real you shine \\\nIn the dust we’re all one — no yours, no mine \\\n(yeahhh!) \\\nSing it now—\\n\\nTen principles, one heart (say it loud!) \\\nGlowin’ wild in the dark (shout it proud!) \\\nWe build, we dance, we share our spark \\\nRadical dreams leave a mark \\\nFrom dust to light, we play our part \\\nTen principles, one heart \\\n(whoooa!) \\\nTen principles, one heart \\\n(ohhh yeah!) \\\nTen principles, one heart\\nTen principles! (One heart!)\\n\\nBack to the dust, where the heart stays free \\\nTen principles live in you and me."
+    }
+  }
+  </script>
 </body>
 </html>
